--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,23 +5,22 @@
       <span class="mdl-layout-title">Books</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
+
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+        <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+          <i class="material-icons">search</i>
+        </label>
+        <div class="mdl-textfield__expandable-holder">
+          <input class="mdl-textfield__input" type="text" id="search">
+          <label class="mdl-textfield__label" for="search">Expandable Input</label>
+        </div>
+      </div>
+      <button class="mdl-button mdl-js-button mdl-button--icon">
+        <i class="material-icons">shopping_cart</i>
+      </button>
     </div>
   </header>
   <main class="mdl-layout__content">
-    <app-category-page></app-category-page>
+    <router-outlet></router-outlet>
   </main>
 </div>
-
-<!--<mat-toolbar class="header">-->
-  <!--<mat-icon [matMenuTriggerFor]="menu">menu</mat-icon>-->
-  <!--<mat-menu #menu="matMenu">-->
-    <!--<button *ngFor="let category of categories" mat-menu-item-->
-            <!--(click)="onCategorySelected(category)">{{category}}</button>-->
-  <!--</mat-menu>-->
-
-  <!--<h3 class="title">Books</h3>-->
-<!--</mat-toolbar>-->
-
-<!--<app-category-page [category]="selectedCategory">-->
-
-<!--</app-category-page>-->
