--- a/src/app/book-card-item/book-card-item.component.html
+++ b/src/app/book-card-item/book-card-item.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="book" class="demo-card-wide mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title" style="background: url({{book.imageUrl}})">
+  <div class="mdl-card__title" style="background: url({{book.imageurl}})">
     <h2 class="mdl-card__title-text">{{book.title}}</h2>
   </div>
   <div class="mdl-card__supporting-text">{{book.description}}</div>
