--- a/src/app/category-items/category-items.component.html
+++ b/src/app/category-items/category-items.component.html
@@ -1,8 +1,15 @@
-<div id="data" class="row list-group">
-  <div *ngFor="let book of books" class="col-xs-4 card mdl-card mdl-shadow--2dp">
+<div id="data" class="">
+  <div *ngFor="let book of books"
+       class="card mdl-card mdl-shadow--2dp">
     <div class="mdl-card__title mdl-card--expand" [style.background]="url(book)">
       <h4 class="mdl-card__title-text card-title">{{book.title}}</h4>
     </div>
     <div class="mdl-card__supporting-text">{{book.description}}</div>
+    <div class="mdl-card__actions mdl-card--border">
+      <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+         routerLink="/bookPage/{{book.genre}}/{{book.id}}">
+        View Book
+      </a>
+    </div>
   </div>
 </div>
