--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,9 @@
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
 
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-        <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-          <i class="material-icons">search</i>
-        </label>
-        <div class="mdl-textfield__expandable-holder">
-          <input class="mdl-textfield__input" type="text" id="search">
-          <label class="mdl-textfield__label" for="search">Expandable Input</label>
-        </div>
-      </div>
+      <button class="mdl-button mdl-js-button mdl-button--icon">
+        <i routerLink="/search" class="material-icons">search</i>
+      </button>
       <button class="mdl-button mdl-js-button mdl-button--icon">
         <i class="material-icons">shopping_cart</i>
       </button>
