--- a/src/app/book-page/book-page.component.html
+++ b/src/app/book-page/book-page.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="book" class="mdl-grid">
   <div class="mdl-cell mdl-cell--4-col">
-    <img src="/assets/images/{{book.imageLink}}">
+    <img [src]="getPath(book)">
   </div>
 
   <div class="mdl-cell mdl-cell--8-col">
