--- a/src/app/category-items/category-items.component.html
+++ b/src/app/category-items/category-items.component.html
@@ -1,7 +1,7 @@
 <div id="data" class="">
   <div *ngFor="let book of books; let i = index"
        class="card mdl-card mdl-shadow--2dp">
-    <div class="mdl-card__title mdl-card--expand" [style.background]="url(book)">
+    <div class="mdl-card__title mdl-card--expand card-image" [style.background]="url(book)">
       <h4 class="mdl-card__title-text card-title">{{book.title}}</h4>
     </div>
     <div class="mdl-card__supporting-text">{{description}}</div>
