--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,25 @@
 body {
   font-family: 'Roboto Condensed', sans-serif;
 }
+
+.card-image {
+  width: 100%;
+  height: 200px;
+}
+
+.card {
+  margin: 10px;
+}
+
+.card-title {
+  color: white;
+  font-size: medium;
+}
+
+.card-author {
+  color: deepskyblue;
+  font-size: small;
+}
+a {
+  text-decoration: none;
+}
