--- a/src/app/category-items/category-items.component.html
+++ b/src/app/category-items/category-items.component.html
@@ -11,5 +11,13 @@
         View Book
       </a>
     </div>
+    <div class="mdl-card__menu">
+      <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+        <i class="material-icons"
+        (click)="addToCart(book)">
+          add_shopping_cart
+        </i>
+      </button>
+    </div>
   </div>
 </div>
