--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -20,7 +20,8 @@
 </div>
 
 <div class="" *ngIf="cartItems.length > 0">
-  <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored fab">
+  <button routerLink="/checkout"
+          class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored fab">
     <i class="material-icons">done</i>
   </button>
 </div>
